argocd/routes/minkms-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minkms
  namespace: data-platform
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minkms.k8sdatalab.com`)
      kind: Rule
      services:
        - name: minkms-minkms
          port: 7373
  tls:
    secretName: wildcard-tls
