argocd/routes/mlflow-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mlflow
  namespace: mlops
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mlflow.k8sdatalab.com`)
      kind: Rule
      services:
        - name: mlflow
          port: 5000
  tls:
    secretName: wildcard-tls
