argocd/routes/nessie-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nessie
  namespace: data-platform
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nessie.k8sdatalab.com`)
      kind: Rule
      services:
        - name: nessie
          port: 19120
  tls:
    secretName: wildcard-tls
