argocd/routes/openmetadata.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openmetadata
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`openmetadata.k8sdatalab.com`)
      kind: Rule
      services:
        - name: openmetadata
          port: 8585
  tls:
    secretName: wildcard-tls
