argocd/routes/trino-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trino
  namespace: data-platform
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`trino.k8sdatalab.com`)
      kind: Rule
      services:
        - name: trino
          port: 8080
  tls:
    secretName: wildcard-tls
