argocd/routes/vault-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: vault
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.k8sdatalab.com`)
      kind: Rule
      services:
        - name: vault
          port: 8200
  tls:
    secretName: wildcard-tls
